fix: Actualización del swagger
